<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_quiz_bowl_rules"
            android:title="@string/quiz_bowl_rules" />
        <item
            android:id="@+id/nav_P2P_compatibility_check"
            android:title="@string/nav_bar_check_p2p_compliance"
            />
        <item
            android:id="@+id/nav_show_decks"
            android:title="@string/nav_bar_edit_decks"
            />
        <item
            android:id="@+id/nav_show_cards"
            android:title="@string/nav_bar_edit_cards"
            />
        <item
            android:title="@string/nav_bar_help">

            <group>

                <item
                    android:id="@+id/help_singleplayer"
                    android:title="@string/nav_bar_help_singleplayer"
                    />
                <item
                    android:title="@string/nav_bar_help_multi"
                    >
                    <group>
                        <item
                            android:id="@+id/help_multi_host"
                            android:title="@string/nav_bar_help_multi_host"
                            />
                        <item
                            android:id="@+id/help_multi_player"
                            android:title="@string/nav_bar_help_multi_player"
                            />
                    </group>
                    </item>
                <item
                    android:id="@+id/help_custom"
                    android:title="@string/nav_bar_help_custom"
                    />
                <item
                    android:id="@+id/help_rules"
                    android:title="@string/nav_bar_help_rules"
                    />
            </group>
        </item>
    </group>

</menu>
