<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/array_adapter_rounded_corners">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingRight="@dimen/array_adapter_padding"
        android:paddingLeft="@dimen/array_adapter_padding"
        android:text="@string/hs_score"
        android:textSize="@dimen/md_text_size_headline"
        android:id="@+id/array_adapter_hs_score" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingRight="@dimen/array_adapter_padding"
            android:paddingLeft="@dimen/array_adapter_padding"
            android:text="@string/hs_time"
            android:textSize="@dimen/md_text_size_headline"
            android:id="@+id/array_adapter_hs_time" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/array_adapter_padding"
        android:paddingLeft="@dimen/array_adapter_padding"
        android:text="@string/hs_deck"
        android:textSize="@dimen/md_text_size_body"
        android:id="@+id/array_adapter_hs_deck" />

</LinearLayout>