<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_end_of_gameplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seniordesign.wolfpack.quizinator.activities.EndOfGameplayActivity">

    <TextView
        android:id="@+id/endOfGameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
         />

    <TableLayout
        android:id="@+id/end_of_gameplay_table"
        android:layout_marginTop="20dp"
        android:layout_below="@id/endOfGameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:background="@drawable/rounded_table_layout_shape"
        android:stretchColumns="1">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/score_label" />
            <TextView
                android:id="@+id/endOfGameScoreText"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/time_elapsed_label" />
            <TextView
                android:id="@+id/endOfGameTimeText"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:id="@+id/end_of_gameplay_row_hs_cards"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/total_cards_label"/>
            <TextView
                android:id="@+id/endOfGameTotalCardsText"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:id="@+id/end_of_gameplay_row_hs_hs"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/high_score_label" />
            <TextView
                android:id="@+id/endOfGameHighScoreText"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:id="@+id/end_of_gameplay_row_hs_time"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/high_score_time_label" />
            <TextView
                android:id="@+id/endOfGameHighScoreTimeText"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>
    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        app:srcCompat="@drawable/ic_close_black_24dp"
        android:id="@+id/goToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:onClick="showMainMenu" />

</RelativeLayout>
